Continue running after errors and fixed album title visibility

--- a/client/src/public/stylesheets/app.styl
+++ b/client/src/public/stylesheets/app.styl
@@ -89,8 +89,7 @@ body
     background-position: center
     background-repeat: no-repeat
     box-shadow: 0 4em 8em rgba(0, 0, 0, 0.2),
-                0 1em 2em rgba(0, 0, 0, 0.5),
-                inset 0 0 0.5em rgba(0, 0, 0, 0.5)
+                0 1em 2em rgba(0, 0, 0, 0.5)
     &--curved
       border-radius: 1em
   &__info
@@ -152,6 +151,7 @@ body
   a
     color: $purple400
   pre
+    max-width: 40em
     margin-top: 2em
     color: $gray200
 
