--- a/client/src/public/stylesheets/index.styl
+++ b/client/src/public/stylesheets/index.styl
@@ -79,7 +79,7 @@ body
         width: 10em
     footer
       display: flex
-      justify-content: space-between
+      justify-content: center
       p
         margin-top: 1em
         font-family: $mainFont
